# extract-strings

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.txt  escape_string.h  main.cpp  string_tools.h
test/: CMakeLists.txt  test1.cpp
